--- a/code/whisky_data.ipynb
+++ b/code/whisky_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "source": [
     "import pandas as pd\r\n",
     "import json"
@@ -12,10 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "source": [
     "# Open JSON data\r\n",
-    "with open(\"./data/whisky_hunter_data.json\") as info:\r\n",
+    "with open(\"../data/whisky_hunter_data.json\") as info:\r\n",
     "    data = json.load(info)"
    ],
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "source": [
     "#create dataframe\r\n",
     "df = pd.DataFrame(data)"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "source": [
     "df.head()"
    ],
@@ -135,14 +135,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 52
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "source": [
     "df.rename(columns = {\"whiskybase_whiskies\" : \"num_whiskies\", \"whiskybase_votes\" : \"num_votes\" , \"whiskybase_rating\" : \"avg_rating\"}, inplace = True)\r\n",
     "df.head()"
@@ -245,14 +245,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 53
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "source": [
     "df.dtypes"
    ],
@@ -271,14 +271,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 54
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "source": [
     "# convert object types to intergers for sorting\r\n",
     "df[[\"num_whiskies\",\"num_votes\"]] = df[[\"num_whiskies\",\"num_votes\"]].astype(str).astype(int)\r\n",
@@ -300,14 +300,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 55
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "source": [
     "# sort, reset index and drop original index column\r\n",
     "top_whiskies = df.sort_values(by=['num_whiskies'], ascending = False).reset_index().drop(['index'], axis = 1)\r\n",
@@ -404,14 +404,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 56
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "source": [
     "top_votes = df.sort_values(by=['num_votes'], ascending = False).reset_index().drop(['index'], axis = 1)\r\n",
     "top_votes.head()"
@@ -507,14 +507,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 57
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "source": [
     "top_rated = df.sort_values(by=['avg_rating'], ascending = False).reset_index().drop(['index'], axis = 1)\r\n",
     "top_rated.head()"
@@ -617,14 +617,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 58
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "source": [
     "# Imports the method used for connecting to DBs\r\n",
     "# ----------------------------------\r\n",
@@ -640,12 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "source": [
-    "df.to_sql(\"raw_data\", engine)\r\n",
-    "top_whiskies.to_sql(\"top_whiskies\", engine)\r\n",
-    "top_votes.to_sql(\"top_votes\", engine)\r\n",
-    "top_rated.to_sql(\"top_rated\", engine)"
+    "df.to_sql(\"raw_data\", engine, if_exists = 'replace')\r\n",
+    "top_whiskies.to_sql(\"top_whiskies\", engine, if_exists = 'replace')\r\n",
+    "top_votes.to_sql(\"top_votes\", engine, if_exists = 'replace')\r\n",
+    "top_rated.to_sql(\"top_rated\", engine, if_exists = 'replace')"
    ],
    "outputs": [],
    "metadata": {}
