started initialisation data retrieval

--- a/code/whisky_data.ipynb
+++ b/code/whisky_data.ipynb
@@ -14,9 +14,8 @@
    "cell_type": "code",
    "execution_count": 50,
    "source": [
-    "# Open JSON data\r\n",
-    "with open(\"../data/whisky_hunter_data.json\") as info:\r\n",
-    "    data = json.load(info)"
+    "# Open csv data\r\n",
+    "data = pd.read_csv(\"../data/whisky_hunter_data.csv\")"
    ],
    "outputs": [],
    "metadata": {}
